Better table and implement tests

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,5 +13,6 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import 'bootstrap-datetimepicker';
 @import "custom";
-@import "formtastic";
+@import "dataTables/bootstrap/3/jquery.dataTables.bootstrap";
