--- a/app/views/runs/index.html.erb
+++ b/app/views/runs/index.html.erb
@@ -3,10 +3,10 @@
   <% if @runs.empty? %>
    <h1>No runs so far</h1>
   <% else %>
-  <table class="table table-hover table-condensed">
+  <table id="run-table" class="table table-striped table-bordered" cellspacing="0" width="100%">
     <thead>
     <tr>
-      <th>Distance</th>
+      <th>Distance (km)</th>
       <th>Duration</th>
       <th>Date</th>
       <th></th>
