Add small changes

--- a/app/views/runs/_run_form.html.erb
+++ b/app/views/runs/_run_form.html.erb
@@ -3,7 +3,7 @@
 
       <div class="input-group">
         <%= f.label :distance, 'Distance (in km)' %>
-        <%= f.number_field :distance, value: 0, step: :any, required: true, class: 'form-control' %>
+        <%= f.number_field :distance, step: :any, required: true, class: 'form-control' %>
       </div>
 
       <div class='input-group date'>
