--- a/app/views/runs/index.html.erb
+++ b/app/views/runs/index.html.erb
@@ -18,8 +18,6 @@
   </table>
   <% end %>
 <% else %>
-    <div class="container jumbotron">
       <h1>Sign in to create and view your runs</h1>
-      <%= link_to 'Sign_in', new_user_session_path, class: 'btn btn-primary btn-lg' %>
-    </div>
+      <%= link_to 'Sign in', new_user_session_path, class: 'btn btn-primary btn-lg' %>
 <% end %>
